<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">全家康手表</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crop__wait" translatable="false">Please wait…</string>
    <string name="crop__saving" translatable="false">Saving picture…</string>
    <string name="crop__pick_error" translatable="false">No image sources available</string>
    <string name="crop__done" translatable="false">确认</string>
    <string name="crop__cancel" translatable="false" tools:ignore="ButtonCase">取消</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="login_title">登录</string>
    <string name="signup_title">注册</string>
    <string name="signup_phone">请输入手机号码</string>
    <string name="signup_checkcode">请输入验证码</string>
    <string name="signup_checkcode_get">获取验证码</string>
    <string name="singup_clause_text">我已阅读并同意《注册条款》</string>
    <string name="singup_clause_text1">我已阅读并同意</string>
    <string name="singup_clause_text2">《注册条款》</string>
    <string name="singup_clause_hint">请阅读并同意《注册条款》!</string>
    <string name="signup_password">请输入密码</string>
    <string name="signup_name">请输入个性昵称</string>
    <string name="signup_password_reinput">请再次确认密码</string>
    <string name="signup_error">注册失败，请重试!</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_password_new">请输入新密码</string>
    <string name="reset_password_recheck">请再次确认新密码</string>
    <string name="reset_password_comfirm">确认</string>
    <string name="main_title">首页</string>
    <string name="next">下一步</string>
    <string name="submit">提  交</string>
    <string name="view_pager_string1_professer">同城名医</string>
    <string name="view_pager_string2_doctors">免费问诊</string>
    <string name="view_pager_string3_yao">易善服务</string>
    <string name="view_pager_string4_familyservice">家政护理</string>
    <string name="view_pager_string5_yigong">爱心义工</string>
    <string name="view_pager_string6">名医咨询</string>
    <string name="view_pager_string7">名医咨询</string>
    <string name="view_pager_string8">名医咨询</string>
    <string name="state_item_string1">计步</string>
    <string name="state_item_string1_value">100/min</string>
    <string name="state_item_string2">(电量)</string>
    <string name="state_item_string3">信号</string>
    <string name="state_item_string4">病历</string>
    <string name="state_item_string3_good">良好</string>
    <string name="state_item_string3_well">一般</string>
    <string name="state_item_string3_bad">差</string>
    <string name="state_item_string5_pulse">脉搏</string>
    <string name="state_item_locating">定位</string>
    <string name="bind_device_id">ID:</string>
    <string name="bind_device_hind">请输入ID账号</string>
    <string name="bind_device_scan">扫描二维码获取</string>
    <string name="bind_device_name">名字:</string>
    <string name="bind_device_name_hind">请输入名字</string>
    <string name="bind_device_hint">请扫描智能手表包装盒上的二维\n码进行设备绑定</string>
    <string name="descr_image">Image</string>
    <string name="name">名字</string>
    <string name="clinic">科室名</string>
    <string name="hospital">医院名</string>
    <string name="field">领域</string>
    <string name="nick_name">外号</string>
    <string name="rank_name">职称</string>
    <string name="commant_number">评论数</string>
    <string name="evaluate">评价</string>
    <string name="phone_docter">电话医生</string>
    <string name="phone_docter_function">寻医问药</string>
    <string name="phone_docter_command1">真正专家</string>
    <string name="phone_docter_command2">绝对隐私</string>
    <string name="phone_docter_command3">更方便、更轻松</string>
    <string name="phone_docter_command4">服务费用:199/年</string>
    <string name="phone_docter_command5">马上申请通话</string>
    <string name="phone_docter_desc">\t提供电话咨询服务的医生全部经过三甲医院认证，职称为中级以上，业务能力在专业领域内权威。\n1.绝对隐私\n\t您的资料信息只有专家可以审阅详情，一对一电话沟通，确保您的个人隐私安全性。\n2.更方便，更轻松\n\t足不出户就可以享受权威专家的沟通业务，在自己隐秘的空间，不受任何人的打扰，轻松地与专家交流病情。</string>
    <string name="login_account">账号:</string>
    <string name="login_account_hint">请输入手机号码</string>
    <string name="login_account_hint_doctor">手机</string>
    <string name="login_password">密码:</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_hint_doctor">密码</string>
    <string name="common_hint_null_return_value">服务器无响应，请重试!</string>
    <string name="common_hint_login_error">登录失败，请输入正确的用户名和密码!</string>
    <string name="common_hint_serial_error">数据格式异常!</string>
    <string name="common_hint_login_im_server_error">聊天服务器登录失败!</string>
    <string name="common_hint_login_params_error">请填写用户名和密码</string>
    <string name="common_add">添加</string>
    <string name="common_delete">删除</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_save">保存</string>
    <string name="common_error_voice">0\"</string>
    <string name="setting_entry_my_orders">我的订单</string>
    <string name="setting_entry_my_reserve">我的预约</string>
    <string name="setting_entry_my_consult">我的咨询</string>
    <string name="setting_entry_my_insure">我的保险</string>
    <string name="setting_entry_bind_devices">绑定设备</string>
    <string name="setting_entry_volunteer">义工消息</string>
    <string name="setting_entry_missing">寻人启事</string>
    <string name="setting_entry_health">健康档案</string>
    <string name="setting_entry_scene_setting">情景设置</string>
    <string name="setting_entry_family_number">亲情号码</string>
    <string name="setting_entry_about_us">关于我们</string>
    <string name="setting_entry_more">更多设置</string>
    <string name="setting_entry_ebean">我的E豆</string>
    <string name="setting_entry_level">礼物记录</string>
    <string name="setting_entry_level1">礼物账单</string>
    <string name="setting_password_modify">修改密码</string>
    <string name="setting_password_origin">请输入原始密码</string>
    <string name="setting_password_origin_error">原始密码输入错误!</string>
    <string name="setting_password_new">请输入新密码</string>
    <string name="setting_password_check">请再次确认新密码</string>
    <string name="setting_password_check1">请填写必填信息</string>
    <string name="setting_password_check2">新密码不一致</string>
    <string name="setting_password_check21">密码长度小于6位</string>
    <string name="setting_password_check22">密码长度大于15位</string>
    <string name="setting_password_check3">修改密码成功</string>
    <string name="setting_password_check31">修改密码成功，请重新登录</string>
    <string name="setting_password_check4">修改密码失败</string>
    <string name="setting_password_check5">密码需要包含字母、数字、或英文符号中至少两种,长度限制6~15位</string>
    <string name="setting_password_check6">请输入手机号</string>
    <string name="setting_password_check7">请输入正确的手机号</string>
    <string name="setting_password_check8">请输入验证码</string>
    <string name="setting_password_check9">验证码错误</string>
    <string name="setting_password_check10">手机号码与获取验证码的手机号码不一致</string>
    <string name="setting_password_check11">密码不一致</string>
    <string name="setting_password_check12">请输入密码</string>
    <string name="setting_password_check13">新密码与原密码一致,请重新输入新密码</string>
    <string name="setting_password_check14">请输入用户姓名</string>
    <string name="setting_more_perfect">完善资料</string>
    <string name="setting_more_pw_modify">修改密码</string>
    <string name="setting_more_withdrawpw_modify">提现管理</string>
    <string name="setting_more_address">收货地址</string>
    <string name="setting_more_react">用户反馈</string>
    <string name="setting_more_version">当前版本</string>
    <string name="setting_more_exit">退出登录</string>
    <string name="setting_more_exit1">退出</string>
    <string name="add_address_receiver">收货人:</string>
    <string name="add_address_mobile">手机号码:</string>
    <string name="add_address_mobile_hint">请输入联系电话:</string>
    <string name="add_address_city">所在地区:</string>
    <string name="add_address_detail">详细地址:</string>
    <string name="add_address_detail_hint">请输入详细地址:</string>
    <string name="receive_address">收货地址</string>
    <string name="receive_address_add">新建地址</string>
    <string name="receive_address_double_space">  </string>
    <string name="error_server_interface">服务器接口异常!</string>
    <string name="error_net">网络异常!</string>
    <string name="about_us">可穿戴智能健康及看护系统\n</string>
    <string name="about_communicate">020-39434080</string>
    <string name="contact_add">已添加</string>
    <string name="contact_unadd">添加</string>
    <string name="bind_device_input_id">ID:</string>
    <string name="bind_device_input_id_2">ID号:</string>
    <string name="bind_device_input_id_hint">请输入ID账号</string>
    <string name="bind_device_input_name">名字:</string>
    <string name="bind_device_input_name_hint">请输入名字</string>
    <string name="bind_device_input_scan_2dcode">扫描二维码获取</string>
    <string name="bind_device_input_image_hint">请上传头像</string>
    <string name="bind_device_input_relate_device">设备IMEI号:</string>
    <string name="bind_device_input_relate_device_hint">请出入IMEI号</string>
    <string name="bind_device_input_relate_device_hint_msg">关联更多设备的时候，只需要知道设备的IMEI号就可以，其余资料不用填。因为关联的前提是使用者为同一个人。</string>
    <string name="bind_device_relate_device_result_msg">抱歉,您关联设备失败,请重新关联!</string>
    <string name="bind_device_relate_device_result_reason_title">失败原因可能如下</string>
    <string name="bind_device_relate_device_result_reason_msg1">① 设备重复关联</string>
    <string name="bind_device_relate_device_result_reason_msg2">② 所填写IMEI号有误</string>
    <string name="bind_device_relate_device_result_reason_msg3">③ 所关联设备尚未激活</string>
    <string name="bind_device_relate_device_button">重 新 关 联</string>
    <string name="bind_device_step_two_device_type_stable">设备类型:</string>
    <string name="bind_device_step_two_device_type_1_watch">设备类型:老人手表</string>
    <string name="bind_device_step_two_device_type_2_mattress">设备类型:老人手表</string>
    <string name="bind_device_step_two_device_type_3_stick">设备类型:老人手表</string>
    <string name="bind_device_step_two_device_nickname_title">手表设备昵称:</string>
    <string name="bind_device_step_two_device_nickname_hint">请输入4个字符以内的昵称</string>
    <string name="bind_device_step_two_relation_title">您与手表使用者的关系:</string>
    <string name="bind_device_step_two_relation_1">儿子</string>
    <string name="bind_device_step_two_relation_2">儿媳</string>
    <string name="bind_device_step_two_relation_3">女儿</string>
    <string name="bind_device_step_two_relation_4">女婿</string>
    <string name="bind_device_step_two_relation_5">自定义</string>
    <string name="bind_device_step_one_title">设备绑定</string>
    <string name="bind_device_step_one_error_hint1">请输入或扫描获取设备IMEI号!</string>
    <string name="bind_device_relate_title">关联设备</string>
    <string name="watch_old_status_check_hint_msg_nodata">没有获取数据</string>
    <string name="watch_old_status_check_hint_msg_wear">手表已佩戴成功</string>
    <string name="watch_old_status_check_hint_msg_unwear">手表未佩戴</string>
    <string name="watch_old_status_check_hint_msg_checking">正在检测</string>
    <string name="watch_old_mattress_nodata_hint_msg">抱歉，未检测到仪器目标</string>
    <string name="main_index_family_member">我的家人</string>
</resources>