<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPureWhite"
    >
    <include 
        android:id="@+id/layout_title"
        layout="@layout/titlebar_common"
        />    
    

    <EditText 
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:singleLine="true"
        android:inputType="phone"
        android:hint="@string/signup_phone"
        android:paddingLeft="@dimen/size_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/signup_phone"
        android:drawablePadding="@dimen/size_6"
        
        />
    
    <TextView
        android:id="@+id/btn_yanzhengma"
        android:layout_width="@dimen/height_100"
        android:layout_height="@dimen/height_45"
        android:layout_below="@+id/et_username"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_alignParentRight="true"
        android:background="@drawable/shape_corner_maincolor"
        android:gravity="center"
        android:text="@string/signup_checkcode_get"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium"
        />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:layout_below="@+id/et_username"
        android:layout_toLeftOf="@+id/btn_yanzhengma"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:singleLine="true"
        android:background="@drawable/selecter_rectangle_hollow"
        android:hint="@string/signup_checkcode"
        android:paddingLeft="@dimen/size_15"
        android:textSize="@dimen/font_medium"
        />

    
    <EditText 
        android:id="@+id/et_newpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/et_code"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:hint="@string/reset_password_new"
        android:singleLine="true"
        android:paddingLeft="@dimen/size_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/signup_password"
        android:drawablePadding="@dimen/size_6"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:id="@+id/rl_pwd"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_below="@+id/et_newpassword">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/iv_warn"/>
        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginLeft="5dp"
            android:text="请至少包含字母、数字或字符中的两种，长度限制为6~15位"/>
    </LinearLayout>
    
    <EditText 
        android:id="@+id/et_confirmnewpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/rl_pwd"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:hint="@string/reset_password_recheck"
        android:singleLine="true"
        android:paddingLeft="@dimen/size_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/signup_password"
        android:drawablePadding="@dimen/size_6"
        android:inputType="textPassword"
        />    
    
    <Button 
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/height_150"
        android:layout_height="@dimen/height_40"
        android:background="@drawable/selecter_bind_device_hollow_green"
        android:layout_below="@+id/et_confirmnewpassword"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_title_green"
        android:gravity="center"
        android:text="@string/reset_password_comfirm"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        />
  
</RelativeLayout> 