<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPureWhite">

    <include
        android:id="@+id/layout_title"
        layout="@layout/titlebar_common"
        />
    <ScrollView
        android:layout_below="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_50"
                android:singleLine="true"
                android:background="@drawable/selecter_rectangle_hollow"
                android:drawableLeft="@drawable/signup_phone"
                android:drawablePadding="@dimen/size_6"
                android:hint="@string/signup_phone"
                android:paddingLeft="@dimen/size_10"
                android:inputType="phone"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/btn_yanzhengma"
                android:layout_width="@dimen/height_100"
                android:layout_height="@dimen/height_45"
                android:layout_below="@+id/et_username"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_corner_maincolor"
                android:gravity="center"
                android:text="@string/signup_checkcode_get"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:layout_below="@+id/et_username"
                android:layout_toLeftOf="@+id/btn_yanzhengma"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_20"
                android:singleLine="true"
                android:background="@drawable/selecter_rectangle_hollow"
                android:drawablePadding="@dimen/size_6"
                android:hint="@string/signup_checkcode"
                android:paddingLeft="@dimen/size_15"
                android:textSize="@dimen/font_medium" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:layout_below="@+id/et_code"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:singleLine="true"
                android:background="@drawable/selecter_rectangle_hollow"
                android:drawableLeft="@drawable/login_username"
                android:drawablePadding="@dimen/size_7"
                android:hint="@string/signup_name"
                android:paddingLeft="@dimen/size_10"
                android:textSize="@dimen/font_medium" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:layout_below="@+id/et_name"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:singleLine="true"
                android:background="@drawable/selecter_rectangle_hollow"
                android:drawableLeft="@drawable/signup_password"
                android:drawablePadding="@dimen/size_6"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/size_10"
                android:textSize="@dimen/font_medium" />

            <LinearLayout
                android:id="@+id/rl_pwd"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_below="@+id/et_password">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/iv_warn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"
                    android:text="请至少包含字母、数字或字符中的两种，长度限制为6~15位"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:layout_below="@+id/rl_pwd"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:singleLine="true"
                android:background="@drawable/selecter_rectangle_hollow"
                android:drawableLeft="@drawable/signup_password"
                android:drawablePadding="@dimen/size_6"
                android:hint="@string/signup_password_reinput"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/size_10"
                android:textSize="@dimen/font_medium" />

            <LinearLayout
                android:id="@+id/signup_clause_line"
                android:layout_below="@id/et_confirmpassword"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_25"
                android:layout_marginRight="@dimen/margin_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/ll_signup_clause_ck"
                    android:layout_width="@dimen/height_35"
                    android:layout_height="@dimen/height_35"
                    >

                    <View
                        android:id="@+id/signup_clause_ck"
                        android:layout_width="@dimen/height_15"
                        android:layout_height="@dimen/height_15"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:background="@drawable/doctor_pay_list_nor"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/signup_clause_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/singup_clause_text"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/height_150"
                android:layout_height="@dimen/height_40"
                android:layout_below="@+id/signup_clause_line"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_marginRight="@dimen/size_15"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginBottom="@dimen/margin_30"
                android:background="@drawable/selector_bind_device_hollow_green"
                android:gravity="center"
                android:text="@string/signup_title"
                android:textColor="@color/color_title_green"
                android:textSize="@dimen/font_20" />
        </RelativeLayout>
    </ScrollView>



</RelativeLayout> 