<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPureWhite"
    >
    <include 
        android:id="@+id/layout_title"
        layout="@layout/titlebar_common"
        />    
    
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/setting_password_origin"
        android:paddingLeft="@dimen/margin_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/sign_key"
        android:drawablePadding="@dimen/size_12"
        />
    
    <EditText
        android:id="@+id/et_newpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:hint="@string/setting_password_new"
        android:singleLine="true"
        android:paddingLeft="@dimen/margin_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/signup_password"
        android:drawablePadding="@dimen/size_6"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:id="@+id/rl_pwd"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_below="@+id/et_newpassword">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/iv_warn"/>
        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginLeft="5dp"
            android:text="@string/setting_password_check15"/>
    </LinearLayout>
    
    <EditText 
        android:id="@+id/et_confirmnewpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:background="@drawable/selecter_rectangle_hollow"
        android:layout_below="@+id/rl_pwd"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:hint="@string/setting_password_check"
        android:singleLine="true"
        android:paddingLeft="@dimen/margin_15"
        android:textSize="@dimen/font_medium"
        android:drawableLeft="@drawable/signup_password"
        android:drawablePadding="@dimen/size_6"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/height_150"
        android:layout_height="@dimen/height_40"
        android:background="@drawable/selecter_hollow_green_transport"
        android:layout_marginTop="31dp"
        android:textColor="@color/color_title_green"
        android:gravity="center"
        android:text="@string/reset_password_comfirm"
        android:layout_below="@+id/et_confirmnewpassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout> 