<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPureWhite">

    <include
        android:id="@+id/layout_title"
        layout="@layout/titlebar_common"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/inputline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/height_130"
                android:layout_below="@+id/imageblock">

                <TextView
                    android:id="@+id/bind_device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/bind_device_input_id_2"
                    android:textColor="@color/font_color_666666"
                    android:textSize="@dimen/font_16"
                    />

                <TextView
                    android:id="@+id/bind_device_scan_2dcode"
                    android:layout_width="@dimen/height_110"
                    android:layout_height="@dimen/height_45"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/bind_device_id"
                    android:layout_marginRight="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/selecter_solid_bg_green"
                    android:drawableLeft="@drawable/scan_2dcode_white"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin_10"
                    android:text="@string/bind_device_input_scan_2dcode"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_10" />

                <EditText
                    android:id="@+id/bind_device_2dcode_value"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_45"
                    android:layout_below="@+id/bind_device_id"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_toLeftOf="@+id/bind_device_scan_2dcode"
                    android:background="@drawable/selecter_rectangle_hollow"
                    android:hint="@string/bind_device_input_id_hint"
                    android:inputType="number"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textSize="@dimen/font_medium" />
            </RelativeLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/height_150"
                android:layout_height="@dimen/height_40"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/relation_line2"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_30"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_marginRight="@dimen/size_15"
                android:layout_marginTop="@dimen/height_90"
                android:background="@drawable/selecter_bind_device_hollow_green"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/color_title_green" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

